Updated code to Java 17