@@ -240,16 +240,16 @@ public class TestProperty {
 		Context.get().executeThreadBound(LocalizationContext.CONTEXT_KEY,
 				LocalizationContext.builder().withInitialLocale(Locale.ITALY).build(), () -> {
 
-					assertEquals("09/03/79 18.30", P7.present(c.getTime()));
+					assertEquals("09/03/79, 18:30", P7.present(c.getTime()));
 
 					final LocalDate date = LocalDate.of(1979, Month.MARCH, 9);
 					assertEquals("09/03/79", P8.present(date));
 
 					final LocalTime time = LocalTime.of(18, 30, 15);
-					assertEquals("18.30", P9.present(time));
+					assertEquals("18:30", P9.present(time));
 
 					final LocalDateTime dt = LocalDateTime.of(1979, Month.MARCH, 9, 18, 30, 15);
-					assertEquals("09/03/79 18.30", P10.present(dt));
+					assertEquals("09/03/79, 18:30", P10.present(dt));
 
 				});
 
@@ -322,7 +322,7 @@ public class TestProperty {
 		assertEquals(TestPropertySet.NAME.getType(), value.getClass());
 
 		Integer sv = box.getValue(TestPropertySet.SEQUENCE);
-		assertEquals(new Integer(1), sv);
+		assertEquals(Integer.valueOf(1), sv);
 		assertEquals(TestPropertySet.SEQUENCE.getType(), sv.getClass());
 
 		PropertyBox pb = PropertyBox
@@ -385,7 +385,7 @@ public class TestProperty {
 		testSetValueUsingConverter(pb2, cp, "1");
 
 		assertEquals("test", pb2.getValue(TestPropertySet.NAME));
-		assertEquals(new Integer(1), pb2.getValue(cp));
+		assertEquals(Integer.valueOf(1), pb2.getValue(cp));
 		assertEquals("1", cp.getConvertedValue(pb2.getValue(cp)));
 		assertEquals("PROVIDED:test", pb2.getValue(vp));
 		assertTrue(pb2.containsValue(TestPropertySet.NAME));
